--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
+#[submodule "specification"]
+#	path = specification
+#	url = https://github.com/CycloneDX/specification
 [submodule "specification"]
 	path = specification
-	url = https://github.com/CycloneDX/specification
+	url = https://github.com/Nicolas-Peiffer/specification
